# nixos-security-tracker

./: .bandit  .editorconfig  .envrc  .gitignore  MANIFEST.in  NOTES.md  README.md  default.nix  manage.py  module.nix  pyproject.toml  setup.cfg  shell.nix  test.nix
.github/: dependabot.yml
.github/workflows/: main.yml  publish-coverage.nix
nix/: default.nix  python-overrides.nix  sources.json
nixos_security_tracker/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
tracker/: exceptions.py  models.py  tables.py  tests.py  urls.py  utils.py  views.py
tracker/github_events/: __init__.py  signature.py
tracker/management/commands/: import_channels.py  import_nvd.py  search_cve_references.py
tracker/migrations/: 0001_initial.py  0002_auto_20201104_2244.py  0003_auto_20201105_2147.py  0004_auto_20201110_1412.py  0005_auto_20201111_0055.py  0005_historicalissue.py  0006_issue_status.py  0007_issuereference.py  0008_issue_status_reason.py  0009_githubevent.py  0010_issue_order.py  0011_auto_20210514_1557.py  0011_channel_channelrevision_package_packageattributename_packagename_packageversion.py
tracker/templates/: base.html  pagination.html
tracker/templates/advisories/: list.html
tracker/templates/github-event/: detail.html
tracker/templates/issues/: detail.html  edit.html  list.html
tracker/templates/registration/: login.html
tracker/templatetags/: nav.py  pagination.py
tracker/tests/: conftest.py  factories.py  test_e2e.py  test_github_events.py  test_import_channels.py  test_import_nvd.py  test_misc.py  test_models.py  test_nav.py  test_packages.py  test_pagination.py  test_utils.py  test_views.py
tracker/tests/fixtures/: issue_comment.json  pull_request.json
