[tool.poetry]
name = "nixos_security_tracker"
version = "0.1.0"
description = ""
authors = ["Andreas Rammhold <andreas@rammhold.de>"]
packages = [
	{ include = "nixos_security_tracker" },
	{ include = "tracker" },
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.3"
django-bootstrap4 = "^2.3.1"
uvicorn = {extras = ["standard"], version = "^0.12.2"}
gunicorn = "^20.0.4"
requests = "^2.24.0"
django-tables2 = "^2.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-django = "^4.1.0"
django-stubs = "^1.7.0"
factory-boy = "^3.1.0"
bpython = "^0.20"
uvicorn = {extras = ["standard"], version = "^0.12.2"}
selenium = "^3.141.0"
isort = "^5.6.4"
freezegun = "^1.0.0"
django-debug-toolbar = "^3.1.1"

[tool.poetry.scripts]
# value needs a colon (:)
# nixos-security-tracker = "nixos_security_tracker.wsgi"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
max-line-length = 120
